adding the header footer and body section

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,20 @@
 <div class="container">
-  <nav class="navbar fixed-top">  
-    <a class="navbar-brand" routerLink="/">Navbar</a>
-    <a class="nav-link" routerLink="home">Home <span class="sr-only">(current)</span></a>
-    <a class="nav-link" routerLink="link">Link</a>
-    <a class="nav-link disabled" routerLink="disabled">Disabled</a>
-    <!--form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form-->  
-  </nav>
+
+      <div class="masthead">
+        <nav class="navbar navbar-light bg-faded rounded mb-3">
+
+            <nav class="navbar fixed-top" style="background-color: midnightblue">  
+              <a class="nav-link" routerLink="home">zdesk</a>
+              <a class="nav-link" routerLink="signin">signin<span class="sr-only">(current)</span></a>
+              <a class="nav-link" routerLink="signup">signup</a>
+              <a class="nav-link disabled" routerLink="complaint">complaint</a>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>  
+            </nav>
+
+
+        </nav>
+      </div>
 </div>
