--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-  <nav class="navbar fixed-bottom">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link disabled" href="#">Disabled</a>  
+  <nav class="navbar fixed-bottom" style="background-color: midnightblue"> 
+    <div class="copyright">
+      <label> &copy; ZDesk Community </label> 
+    </div>
   </nav>
 </div>
