adding angular cli file

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <nav class="navbar fixed-bottom" style="background-color: midnightblue"> 
+  <nav class="navbar fixed-bottom"> 
     <div class="copyright">
       <label> &copy; ZDesk Community </label> 
     </div>
