--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,27 @@
-<div class="container">
-
-      <div class="masthead">
-        <nav class="navbar navbar-light bg-faded rounded mb-3">
-
-            <nav class="navbar fixed-top" style="background-color: midnightblue">  
-              <a class="nav-link" routerLink="home">zdesk</a>
+<nav class="navbar  fixed-top" > 
+  <a class="nav-link" routerLink="home"><img aria-label="ZDesk-Client" height="30px" width="30px" src="../../assets/img/Logo.png"></a>
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#Colapseme" aria-controls="Colapseme" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="Colapseme"> 
+      <ul class="navbar-nav">
+          <li class="nav-item active">
+              <a class="nav-link" routerLink="home">home</a>
+          </li>
+          <li class="nav-item active">
               <a class="nav-link" routerLink="signin">signin<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
               <a class="nav-link" routerLink="signup">signup</a>
-              <a class="nav-link disabled" routerLink="complaint">complaint</a>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>  
-            </nav>
-
-
-        </nav>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link disabled" routerLink="complaint">complaint</a>
+          </li>
+      </ul>
       </div>
-</div>
+    <!--form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+    </form-->  
+
+</nav>
