--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,27 +1,27 @@
-<nav class="navbar  fixed-top" > 
+<nav class="navbar  navbar-light fixed-top" > 
   <a class="nav-link" routerLink="home"><img aria-label="ZDesk-Client" height="30px" width="30px" src="../../assets/img/Logo.png"></a>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#Colapseme" aria-controls="Colapseme" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <div class="nav-link welcome"  >Welcome to zdesk</div>
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="true" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon" id="toggle"></span>
   </button>
-  <div class="collapse navbar-collapse" id="Colapseme"> 
+  <div class="collapse navbar-collapse" id="menu"> 
       <ul class="navbar-nav">
           <li class="nav-item active">
-              <a class="nav-link" routerLink="home">home</a>
+              <a class="nav-link" (click)="collapseMenu()" routerLink="home">home</a>
           </li>
           <li class="nav-item active">
-              <a class="nav-link" routerLink="signin">signin<span class="sr-only">(current)</span></a>
+              <a class="nav-link" (click)="collapseMenu()" routerLink="signin">signin<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-              <a class="nav-link" routerLink="signup">signup</a>
+              <a class="nav-link" (click)="collapseMenu()" routerLink="signup">signup</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link disabled" routerLink="complaint">complaint</a>
+            <a class="nav-link disabled" (click)="collapseMenu()" routerLink="complaint">complaint</a>
           </li>
       </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+      </form> 
       </div>
-    <!--form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
-    </form-->  
-
 </nav>
