added few other component structure

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar  navbar-light fixed-top" > 
-  <a class="nav-link" routerLink="home"><img aria-label="ZDesk-Client" height="30px" width="30px" src="../../assets/img/Logo.png"></a>
+  <a class="nav-link" routerLink="home"><img (click)="collapseMenu()" aria-label="ZDesk-Client" height="30px" width="30px" src="../../assets/img/Logo.png"></a>
   <div class="nav-link welcome"  >Welcome to zdesk</div>
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon" id="toggle"></span>
