--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,7 +7,11 @@
 }
 
 .welcome{
-    text-align: center;
-    font-size: 1rem !important;
-    font-weight: bold;
+    color: aliceblue !important; 
+    text-align: left;
+    /*font-size: 1rem !important;
+    font-weight: bold;*/
+    font-style: italic;
+    padding-right: 5px;
+    padding-left: 5px;
 }
