--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,27 +1,43 @@
-<nav class="navbar  navbar-light fixed-top" > 
-  <a class="nav-link" routerLink="home"><img (click)="collapseMenu()" aria-label="ZDesk-Client" height="30px" width="30px" src="../../assets/img/Logo.png"></a>
-  <div class="nav-link welcome"  >Welcome to zdesk</div>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="true" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon" id="toggle"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="menu"> 
-      <ul class="navbar-nav">
-          <li class="nav-item active">
-              <a class="nav-link" (click)="collapseMenu()" routerLink="home">home</a>
-          </li>
-          <li class="nav-item active">
-              <a class="nav-link" (click)="collapseMenu()" routerLink="signin">signin<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-              <a class="nav-link" (click)="collapseMenu()" routerLink="signup">signup</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link disabled" (click)="collapseMenu()" routerLink="complaint">complaint</a>
-          </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
-      </form> 
-      </div>
-</nav>
+<nav class="navbar navbar-expand-md navbar-light fixed-top">
+        <div class="container">
+            <span>
+                <a routerLink="home"><img (click)="collapseMenu()" class="logo" aria-label="ZDesk-Client" src="../../assets/img/Logo.png"/></a>
+                <span class="welcome" ><sub>make a difference</sub></span>
+            </span>            
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon" id="toggle"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse justify-content-end" id="menu">
+                <ul class="navbar-nav m-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="collapseMenu()" routerLink="home">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" (click)="collapseMenu()" routerLink="signin">Signin<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="collapseMenu()" routerLink="signup">Signup</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="collapseMenu()" routerLink="report">Complaint</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" (click)="collapseMenu()" routerLink="report">Contact Us</a>
+                    </li>
+                </ul>
+    
+                <!--form class="form-inline my-2 my-lg-0">
+                    <div class="input-group input-group-sm">
+                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Search...">                        
+                    </div>
+                    <div>
+                        <a class="btn btn-primary" href="">
+                        <i class="fa fa-shopping-cart"></i> Search
+                        </a>
+                    </div>
+                    
+                </form-->
+            </div>
+        </div>
+    </nav>
