--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,99 @@
-<div>
-  Welcome to ZDesk Home!
-</div>
+<div class="hader">
+    <nav class="navbar navbar-default navbar-fixed-top" data-spy="affix" data-offset-top="10" data-offset-bottom="200">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><img src="http://lightofweb.com/zanzo-website/img/logo.png"></a>
+        </div>
+    
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav pull-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Carrer</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+     
+    
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    </div>
+    
+    
+    <div class="video-part">
+     <video autoplay="autoplay" loop="loop" muted="muted">
+      <source src="http://lightofweb.com/zanzo-website/video/Typing.mp4" type="video/mp4">
+    </video> 
+    
+    <div class="container">
+    <div class="video-part-content">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
+    
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <div class="carousel-caption ">
+
+          <img src="http://lightofweb.com/zanzo-website/img/light-bulb.png" class="img-responsive animated fadeInDown">
+
+          <div class="full-width animated fadeInUp">
+            <h1>Racing your ideas to reality</h1>
+            <p>Transforming ideas to successful business goal,
+    with your extended IT team. </p>
+    <a href="#" class="btn btn-info">Read More</a>
+    </div>
+          </div>
+        </div>
+        <div class="item">
+         <div class="carousel-caption ">
+
+          <img src="http://lightofweb.com/zanzo-website/img/light-bulb.png" class="img-responsive  animated fadeInDown">
+  
+          <div class="full-width animated fadeInUp">
+            <h1>Racing your ideas to reality</h1>
+            <p>Transforming ideas to successful business goal,
+    with your extended IT team. </p>
+    <a href="#" class="btn btn-info">Read More</a>
+    </div>
+          </div>
+        </div>
+        <div class="item">
+         <div class="carousel-caption">
+
+          <img src="http://lightofweb.com/zanzo-website/img/light-bulb.png" class="img-responsive animated fadeInDown">
+
+          <div class="full-width animated fadeInUp">
+            <h1>Racing your ideas to reality</h1>
+            <p>Transforming ideas to successful business goal,
+    with your extended IT team. </p>
+    <a href="#" class="btn btn-info">Read More</a>
+    </div>
+          </div>
+        </div>
+       
+      </div>
+    
+      <!-- Controls -->
+      
+    </div>
+    </div>
+    </div>
+    
+    </div>
