--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,3 +1,69 @@
-<p>
-  login works!
-</p>
+<div class="container">
+    <form class="form-horizontal" role="form" method="POST" action="/login" autocomplete="off">
+        <div class="row">
+
+            <div class="col-md-4">
+                <h2>Please Login</h2>
+                <sub>You can login with email or phone number</sub>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div _ngcontent-c3="" class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <label class="" for="email">E-Mail Address:</label>
+                    <input type="text" name="email" class="form-control" id="email" placeholder="you@example.com" required autofocus>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div _ngcontent-c3="" class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    OR
+                </div>
+            </div>
+        </div>
+        <div class="row">
+
+            <div _ngcontent-c3="" class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <label class="" for="email">Phone Number:</label>
+                    <input type="text" name="mobile" class="form-control" id="mobile" placeholder="9876543210" required autofocus>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+
+            <div _ngcontent-c3="" class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <label class="" for="password">Password:</label>
+                    <input type="password" name="password" class="form-control" id="password" placeholder="password" required autofocus>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-4">
+                <div class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <label class="form-check-label">
+                        <input class="" name="remember" type="checkbox">
+                        <span>Remember me</span>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <button type="submit" class="btn button">
+                        <i class="fa fa-sign-in"></i> Sign-in</button>
+                    <div class="right">
+                        <a class="link" routerLink="/password">Forgot Your Password?</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
