--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,3 +1,72 @@
-<p>
-  signup works!
-</p>
+<div class="container">
+    <form class="form-horizontal" role="form" method="POST" action="/register" autocomplete="off">
+        <div class="row">
+
+            <div class="col-md-4">
+                <h2>Register</h2>
+                <sub>Please fill the details</sub>
+                <hr>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div _ngcontent-c3="" class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <label class="" for="email">Name:</label>
+                    <input type="text" name="name" class="form-control" id="name" placeholder="John Doe" required autofocus>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div _ngcontent-c3="" class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <label class="" for="email">E-Mail Address:</label>
+                    <input type="text" name="email" class="form-control" id="email" placeholder="you@example.com" required autofocus>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div _ngcontent-c3="" class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <label class="" for="email">Phone Number:</label>
+                    <input type="text" name="mobile" class="form-control" id="mobile" placeholder="9876543210" required autofocus>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+
+            <div _ngcontent-c3="" class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <label class="" for="password">Password:</label>
+                    <input type="password" name="password" class="form-control" id="password" placeholder="password" required autofocus>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div _ngcontent-c3="" class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <label class="" for="password">Confirm Password:</label>
+                    <input type="password" name="confirm_password" class="form-control" id="confirm_password" placeholder="confirm password"
+                        required autofocus>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-4">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <button type="submit" class="btn button">
+                        <i class="fa fa-sign-in"></i>Register</button>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
