updated complaint page and contact us page

--- a/src/app/progress/progress.component.css
+++ b/src/app/progress/progress.component.css
@@ -1,12 +1,12 @@
 .animationload {
-    background-color: aliceblue;
+    background-color: black;
     height: 100%;
     left: 0;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 10000;
-    opacity: .5;
+    opacity: .6;
 }
 .osahanloading {
     animation: 1.5s linear 0s normal none infinite running osahanloading;
