--- a/src/app/complaint/complaint.component.html
+++ b/src/app/complaint/complaint.component.html
@@ -1,76 +1,58 @@
-
-    <div class="container">
-        <div class="row">            
-            <div class="col-md-6">
-                <h2>Contact Us</h2><sub>Feel free to contact us</sub>
-                <hr>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Report an issue</h2>
+            <sub>Please report an authentic issue to retain credebility</sub>
+            <hr>
         </div>
     </div>
+</div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-8">
             <div class="well well-sm">
                 <form>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="name">
-                                Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="name">
+                                    Name</label>
+                                <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
+                            </div>
+                            <div class="form-group">
+                                <label for="email">
+                                    Email Address</label>
+                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" />
+                            </div>
+                            <div class="group">
+                                OR
+                            </div>
+                            <div class="form-group">
+                                <label for="phone">
+                                    Phone</label>
+                                <input type="text" class="form-control" id="phone" placeholder="9876543210" required="required" />
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="email">
-                                Email Address</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
-                                </span>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="subject">
+                                    Subject</label>
+                                <textarea class="form-control" id="subject" rows="1" placeholder="Please specify a subject" required="required" ></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="name">
+                                    Issue Description</label>
+                                <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required" placeholder="Please summarise the issue here..."></textarea>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="subject">
-                                Subject</label>
-                            <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
-                            </select>
+                        <div class="col-md-12">
+                            <button type="submit" class="btn button" id="btnContactUs">
+                                Report</button>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="name">
-                                Message</label>
-                            <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Message"></textarea>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <button type="submit" class="btn button" id="btnContactUs">
-                            Send Message</button>
-                    </div>
-                </div>
                 </form>
             </div>
-        </div>
-        <div class="col-md-4">
-            <form>
-            <legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
-            <address>
-                <strong>Twitter, Inc.</strong><br>
-                795 Folsom Ave, Suite 600<br>
-                San Francisco, CA 94107<br>
-                <abbr title="Phone">
-                    P:</abbr>
-                (123) 456-7890
-            </address>
-            <address>
-                <strong>Full Name</strong><br>
-                <a class="link" href="mailto:#">first.last@example.com</a>
-            </address>
-            </form>
         </div>
     </div>
 </div>
