--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container">
             <span>
-                <a routerLink="home"><img (click)="collapseMenu()" class="logo" aria-label="ZDesk-Client" src="../../assets/img/Logo.png"/></a>
-                <span class="welcome" ><sub>make a difference</sub></span>
+                <a routerLink="home"><img (click)="collapseMenu()" class="logo" aria-label="ZDesk-Client" src="../../assets/img/logo.png"/></a>
+                <span class="welcome" >ZDESK<sub>make a difference</sub></span>
             </span>            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" id="toggle"></span>
             </button>
     
             <div class="collapse navbar-collapse justify-content-end" id="menu">
-                <ul class="navbar-nav m-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" (click)="collapseMenu()" routerLink="home">Home</a>
                     </li>
@@ -23,21 +23,22 @@
                         <a class="nav-link" (click)="collapseMenu()" routerLink="report">Complaint</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" (click)="collapseMenu()" routerLink="report">Contact Us</a>
+                        <a class="nav-link disabled" (click)="collapseMenu()" routerLink="contactus">Contact Us</a>
                     </li>
                 </ul>
     
-                <!--form class="form-inline my-2 my-lg-0">
+                <!-- <form class="form-inline my-2 my-lg-0">
                     <div class="input-group input-group-sm">
                         <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Search...">                        
                     </div>
+                    <br/>
                     <div>
                         <a class="btn btn-primary" href="">
                         <i class="fa fa-shopping-cart"></i> Search
                         </a>
                     </div>
                     
-                </form-->
+                </form> -->
             </div>
         </div>
     </nav>
