added service worker support

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 .navbar {
-    background-color: #17a2b8;
-    height: 48px;
+    /* background-color: #17a2b8; */
+    background-color: mediumseagreen;
 }
 
 .nav-link{
