--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -6,6 +6,6 @@
 
 }
 .navbar {
-    background-color: #17a2b8;
-    height: 48px;
+    /* background-color: #17a2b8; */
+    background-color: mediumseagreen;
 }
