--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="form-horizontal" role="form" method="POST" action="/login" autocomplete="off">
+    <form class="form-horizontal" #signinForm="ngForm" (ngSubmit)="attemptSignin()">
         <div class="row">
 
             <div class="col-md-6">
@@ -12,7 +12,7 @@
             <div _ngcontent-c3="" class="col-md-6">
                 <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
                     <label class="" for="email">E-Mail Address:</label>
-                    <input type="text" name="email" class="form-control" id="email" placeholder="you@example.com" required autofocus>
+                    <input type="text" ngModel name="email" class="form-control" id="email" placeholder="you@example.com" >
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
             <div _ngcontent-c3="" class="col-md-6">
                 <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
                     <label class="" for="email">Phone Number:</label>
-                    <input type="text" name="mobile" class="form-control" id="mobile" placeholder="9676543210" required autofocus>
+                    <input type="text" ngModel name="mobile" class="form-control" id="mobile" placeholder="9676543210" >
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
             <div _ngcontent-c3="" class="col-md-6">
                 <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
                     <label class="" for="password">Password:</label>
-                    <input type="password" name="password" class="form-control" id="password" placeholder="password" required autofocus>
+                    <input type="password" ngModel name="password" class="form-control" id="password" placeholder="password" >
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
             <div class="col-md-6">
                 <div class="form-check mb-2 mr-sm-2 mb-sm-0">
                     <label class="form-check-label">
-                        <input class="" name="remember" type="checkbox">
+                        <input ngModel class="" name="remember" type="checkbox">
                         <span>Remember me</span>
                     </label>
                 </div>
