--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="form-horizontal" role="form" method="POST" action="/register" autocomplete="off">
+    <form class="form-horizontal" #signupForm="ngForm" (ngSubmit)="registerUser(signupForm)">
         <div class="row">
 
             <div class="col-md-6">
@@ -14,7 +14,7 @@
             <div _ngcontent-c3="" class="col-md-6">
                 <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
                     <label class="" for="email">Name:</label>
-                    <input type="text" name="name" class="form-control" id="name" placeholder="John Doe" required autofocus>
+                    <input type="text" ngModel name="name" class="form-control" id="name" placeholder="John Doe" >
                 </div>
             </div>
         </div>
@@ -24,7 +24,7 @@
             <div _ngcontent-c3="" class="col-md-6">
                 <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
                     <label class="" for="email">E-Mail Address:</label>
-                    <input type="text" name="email" class="form-control" id="email" placeholder="you@example.com" required autofocus>
+                    <input type="text" ngModel name="email" class="form-control" id="email" placeholder="you@example.com" >
                 </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
             <div _ngcontent-c3="" class="col-md-6">
                 <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
                     <label class="" for="email">Phone Number:</label>
-                    <input type="text" name="mobile" class="form-control" id="mobile" placeholder="9676543210" required autofocus>
+                    <input type="text" ngModel name="mobile" class="form-control" id="mobile" placeholder="9676543210" >
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <div _ngcontent-c3="" class="col-md-6">
                 <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
                     <label class="" for="password">Password:</label>
-                    <input type="password" name="password" class="form-control" id="password" placeholder="password" required autofocus>
+                    <input type="password" ngModel name="password" class="form-control" id="password" placeholder="password" >
                 </div>
             </div>
         </div>
@@ -53,8 +53,22 @@
             <div _ngcontent-c3="" class="col-md-6">
                 <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
                     <label class="" for="password">Confirm Password:</label>
-                    <input type="password" name="confirm_password" class="form-control" id="confirm_password" placeholder="confirm password"
-                        required autofocus>
+                    <input type="password" ngModel name="confirm_password" class="form-control" id="confirm_password" placeholder="confirm password">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div _ngcontent-c3="" class="col-md-6">
+                <div _ngcontent-c3="" class="form-check mb-2 mr-sm-2 mb-sm-0">
+                    <div class="form-group">
+                        <label class="" for="password">Choose User Type</label>
+                        <select ngModel name="userType" class="form-control" id="userType" >
+                            <option value="" selected="">Choose One:</option>
+                            <option value="organisation" >Organisation</option>
+                            <option value="voluntier">Voluntier</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
