--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="form-horizontal" #signinForm="ngForm" (ngSubmit)="attemptSignin()">
+    <form class="form-horizontal" #signinForm="ngForm" (ngSubmit)="attemptSignin(signinForm)">
         <div class="row">
 
             <div class="col-md-6">
