--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -73,7 +73,7 @@
 	width: 100%;
 	height: 100%;
 	padding-top: 8%;
-	background:rgba(87, 117, 189, 0.5) ;
+	background:mediumaquamarine ;
 }
 
 .video-part-content .carousel-caption
