--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,9 +9,9 @@
 </div>
 
 <div style="padding-top:80px;" class="video-part">
-  <video autoplay="autoplay" loop="loop" muted="muted">
+  <!-- <video autoplay="autoplay" loop="loop" muted="muted">
     <source src="http://lightofweb.com/zanzo-website/video/Typing.mp4" type="video/mp4">
-  </video>
+  </video> -->
 
   <div class="container">
     <div class="video-part-content">
