commiting the issuelist and profile tracker components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,62 +1,61 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Welcome to ZDesk</h2>
-            <span>Lets make a difference...</span>
-            <hr>
-        </div>
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Welcome to ZDesk</h2>
+      <span>Lets make a difference...</span>
+      <hr>
     </div>
+  </div>
 </div>
 
-<div style="padding-top:80px;" class="video-part">
-  <!-- <video autoplay="autoplay" loop="loop" muted="muted">
+<div class="container">
+  <div class="row">
+    <div class="video-part col-md-8">
+      <!-- <video autoplay="autoplay" loop="loop" muted="muted">
     <source src="http://lightofweb.com/zanzo-website/video/Typing.mp4" type="video/mp4">
   </video> -->
 
-  <div class="container">
-    <div class="video-part-content">
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <div class="carousel-caption ">
-              <div class="full-width animated fadeInUp">
-                <h1>Application is under development...</h1>
-                <p>This platform will be used as social issue reporting system. </p>
+      <div class="video-part-content">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <div class="carousel-caption ">
+                <div class="full-width animated fadeInUp">
+                  <h1>Application is under development...</h1>
+                  <p>This platform will be used as social issue reporting system. </p>
+
+                </div>
               </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="carousel-caption ">
-              <div class="full-width animated fadeInUp">
+            <div class="item">
+              <div class="carousel-caption ">
+                <div class="full-width animated fadeInUp">
                   <h1>The Service will be free and will remain free forever...</h1>
                   <p> There will no fixed or usage charges for this service. </p>
 
+                </div>
               </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="carousel-caption">
-              <div class="full-width animated fadeInUp">
-                <h1>Lets be responsible and report a social issue</h1>
-                <p>Make our social issues visible to authorities. </p>
+            <div class="item">
+              <div class="carousel-caption">
+                <div class="full-width animated fadeInUp">
+                  <h1>Lets be responsible and report a social issue</h1>
+                  <p>Make our social issues visible to authorities. </p>
+                </div>
               </div>
             </div>
+
           </div>
+
+          <!-- Controls -->
 
         </div>
-
-        <!-- Controls -->
-
       </div>
+    </div>
+    <div class="col-md-4">
+      <app-issuelist></app-issuelist>
     </div>
   </div>
 
