--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,6 +7,13 @@
     color: aliceblue !important;    
 }
 
+.active{
+    color : crimson !important;
+    font-style: italic !important;
+    font-weight: bold !important;
+    font-size: 1.2rem !important;
+}
+
 .welcome{
     color: aliceblue !important; 
     text-align: left;
