--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,19 +11,25 @@
             <div class="collapse navbar-collapse justify-content-end" id="menu">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" (click)="collapseMenu()" routerLink="home">Home</a>
+                        <a class="nav-link" id="home" (click)="collapseMenu();makeLinkActive($event);" routerLink="home">Home</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" (click)="collapseMenu()" routerLink="signin">Signin<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" (click)="collapseMenu()" routerLink="signup">Signup</a>
+                    <li class="nav-item ">
+                        <a class="nav-link" id="signin" (click)="collapseMenu();makeLinkActive($event);" routerLink="signin">Sign in<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" (click)="collapseMenu()" routerLink="report">Complaint</a>
+                        <a class="nav-link" id="signup" (click)="collapseMenu();makeLinkActive($event);" routerLink="signup">Sign up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" (click)="collapseMenu()" routerLink="contactus">Contact Us</a>
+                            <a class="nav-link" id="profile" (click)="collapseMenu();makeLinkActive($event);" routerLink="profile">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" id="tracker" (click)="collapseMenu();makeLinkActive($event);" routerLink="tracker">Tracker</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="complaint" (click)="collapseMenu();makeLinkActive($event);" routerLink="complaint">Complaint</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="contactus" (click)="collapseMenu();makeLinkActive($event);" routerLink="contactus">Contact Us</a>
                     </li>
                 </ul>
     
