home page refactored but not looking good

--- a/src/app/issuelist/issuelist.component.html
+++ b/src/app/issuelist/issuelist.component.html
@@ -1,35 +1,78 @@
 <div class="container">
-    <h2>Filed complaints...</h2>
-    <div class="panel-group">
-      <div class="panel panel-default">
-        <div class="panel-heading">Panel with panel-default class</div>
-        <div class="panel-body">Panel Content</div>
-      </div>
-  
-      <div class="panel panel-primary">
-        <div class="panel-heading">Panel with panel-primary class</div>
-        <div class="panel-body">Panel Content</div>
-      </div>
-  
-      <div class="panel alert-danger row">
-        <div class="panel-heading">Panel with panel-success class</div>
-        <div class="panel-body">Panel Content</div>
-      </div>
-  
-      <div class="panel panel-info">
-        <div class="panel-heading">Panel with panel-info class</div>
-        <div class="panel-body">Panel Content</div>
-      </div>
-  
-      <div class="panel panel-warning">
-        <div class="panel-heading">Panel with panel-warning class</div>
-        <div class="panel-body">Panel Content</div>
-      </div>
-  
-      <div class="panel panel-danger">
-        <div class="panel-heading">Panel with panel-danger class</div>
-        <div class="panel-body">Panel Content</div>
-      </div>
+  <h2 class="heading">COMPLAINTS</h2>
+  <a class="link" routerLink="/tracker" >
+    <div class="alert alert-warning">
+      THIS IS SAMPLE COMPLAINT..
     </div>
-  </div>
-  
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-primary">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-warning">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-primary">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-warning">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-primary">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-warning">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-primary">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-warning">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-primary">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-warning">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-primary">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+
+  <a class="link" routerLink="/tracker">
+    <div class="alert alert-warning">
+      THIS IS SAMPLE COMPLAINT..
+    </div>
+  </a>
+</div>
