jwt client side integration and interceptor integration

--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -19,7 +19,7 @@
                             <div class="form-group">
                                 <label for="email">
                                     Email Address</label>
-                                <input type="email" ngModel class="form-control" name="emailAddress" id="email" placeholder="Enter email" />
+                                <input type="email" ngModel class="form-control" name="email" id="email" placeholder="Enter email" />
                             </div>
                             <div class="group">
                                 OR
@@ -27,7 +27,7 @@
                             <div class="form-group">
                                 <label for="phone">
                                     Phone</label>
-                                <input type="text" ngModel class="form-control" id="phone" name="mobileNo" placeholder="9876543210" />
+                                <input type="text" ngModel class="form-control" id="phone" name="phone" placeholder="9876543210" />
                             </div>
                             <div class="form-group">
                                 <label for="name">
