--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,27 +14,30 @@
         <div class="collapse navbar-collapse justify-content-end" id="menu">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" id="home" (click)="collapseMenu();makeLinkActive($event);" routerLink="home">Home</a>
+                    <a class="nav-link" id="home" (click)="collapseMenu()" routerLink="home">Home</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" id="signin" (click)="collapseMenu();makeLinkActive($event);" routerLink="signin">Sign in
+                    <a class="nav-link" id="signin" (click)="collapseMenu()" *ngIf="!authenticated" routerLink="signin">Sign in
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="signup" (click)="collapseMenu();makeLinkActive($event);" routerLink="signup">Sign up</a>
+                    <a class="nav-link" id="signup" (click)="collapseMenu()" *ngIf="!authenticated" routerLink="signup">Sign up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="profile" (click)="collapseMenu();makeLinkActive($event);" routerLink="profile">Profile</a>
+                    <a class="nav-link" id="profile" (click)="collapseMenu()" *ngIf="authenticated" routerLink="profile">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="tracker" (click)="collapseMenu();makeLinkActive($event);" routerLink="tracker">Tracker</a>
+                    <a class="nav-link" id="tracker" (click)="collapseMenu()" routerLink="tracker">Tracker</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="complaint" (click)="collapseMenu();makeLinkActive($event);" routerLink="complaint">Complaint</a>
+                    <a class="nav-link" id="complaint" (click)="collapseMenu()" routerLink="complaint">Complaint</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="contactus" (click)="collapseMenu();makeLinkActive($event);" routerLink="contactus">Contact Us</a>
+                    <a class="nav-link" id="contactus" (click)="collapseMenu()" routerLink="contactus">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="profile" (click)="collapseMenu(); logout();" *ngIf="authenticated" routerLink="home">logout</a>
                 </li>
             </ul>
 
