Profile mechanism updated.

--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -59,7 +59,8 @@
       <div class="col-md-4">
           <form>
               <legend>
-                  <span class="glyphicon glyphicon-globe"></span> Our office</legend>
+                  <span class="glyphicon glyphicon-globe"></span> Our office
+              </legend>
               <address>
                   <strong>ZDESK, Community.</strong>
                   <br> ss 431 KDA, Narayanpuri, 
