--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
     <div class="row my-4">
       <div style="text-align:center" class="col-lg-8">
-        <img class="img-fluid rounded" src="resources/assets/img/logo.png" alt="Welcome to Zdesk">
+        <img class="img-fluid rounded" src="/assets/img/logo.png" alt="Welcome to Zdesk">
       </div>
 
       <div class="col-lg-4">
