--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -36,10 +36,10 @@
                             </div>
                         </div> 
                         <div class="col-md-6">
-                            <a class="btn button btn-social-icon btn-facebook" href="/auth/facebook?scope=public_profile">
+                            <a class="btn button btn-social-icon btn-facebook" href="{{this.oauthFacebook}}">
                                 <span class="fa fa-facebook">Login With Facebook</span>
                               </a>
-                              <a class="btn button btn-social-icon btn-google" href="/auth/google?scope=profile email">
+                              <a class="btn button btn-social-icon btn-google" href="{{this.oauthGoogle}}">
                                 <span class="fa fa-google">Login with Google</span>
                               </a>
                         </div>                       
