--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
     <div class="container">
         <a routerLink="home">
-            <img (click)="collapseMenu()" class="logo" aria-label="ZDesk-Client" src="resources/assets/img/logo.png" />
+            <img (click)="collapseMenu()" class="logo" aria-label="ZDesk-Client" src="/assets/img/logo.png" />
         </a>
         <span class="welcome">ZDESK
             <sub>make a difference</sub>
