--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,16 +4,16 @@
 			<div class="profile-sidebar">
 				<!-- SIDEBAR USERPIC -->
 				<div class="profile-userpic">
-					<img src="resources/assets/img/logo.png" class="img-responsive" alt="ZDESK">
+					<img src="{{this.profileData.picture}}" class="img-responsive" alt="{{this.profileData.name}}">
 				</div>
 				<!-- END SIDEBAR USERPIC -->
 				<!-- SIDEBAR USER TITLE -->
 				<div class="profile-usertitle">
 					<div class="profile-usertitle-name">
-						John Doe
+						{{this.profileData.given_name}}
 					</div>
 					<div class="profile-usertitle-job">
-						Voluntier
+						{{this.profileData.name}}
 					</div>
 				</div>
 				<!-- END SIDEBAR USER TITLE -->
@@ -54,6 +54,19 @@
 		<div class="col-md-9">
             <div class="profile-content">
 			        USER INFORMATION FRAME...
+			        
+			        <div>
+			        	{{this.profileData.name}}
+			        </div>
+			        <div>
+			        	{{this.profileData.given_name}}
+			        </div>
+			        <div>
+			        	{{this.profileData.picture}}
+			        </div>
+			        <div>
+			        	{{this.profileData.email}}
+			        </div>			        
             </div>
 		</div>
 	</div>
